# HelloOpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: camera.h  cube.h  cube_render.h  node.h  shader.h  texture_render.h  ui_text.h
resources/shaders/: basic_lighting.fs  font.fs  sdf.fs  sdf.vs
shaders/: basic_lighting.fs
src/: main.cpp  node.cpp
